fix: modified the filter sectional component's visibility

--- a/scss/pc/product/product.scss
+++ b/scss/pc/product/product.scss
@@ -38,8 +38,8 @@
             gap: 30px;
             padding: 30px 24px;
             border-radius: 12px;
-            background: #fff;
-            box-shadow: 0 1px 4px 0 rgba(24, 26, 32, 0.07);
+            background: #f8f8f8;
+            box-shadow: 10px 10px 14px 10px rgba(24, 26, 32, 0.07);
             max-height: 0;
             opacity: 0;
             overflow: hidden;
